<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/beranda"
        android:enabled="true"
        android:title="@string/beranda"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/timeline"
        android:enabled="true"
        android:title="@string/timeline"
        android:icon="@drawable/ic_clock"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/post"
        android:enabled="false"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notifikasi"
        android:enabled="true"
        android:title="@string/notifikasi"
        android:icon="@drawable/ic_notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/saya"
        android:enabled="true"
        android:title="@string/saya"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom" />
</menu>