<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="xyz.cintiawan.titipyuk.ui.user.profile.setting.SettingPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/very_large"
        android:layout_marginStart="@dimen/edittext_margin"
        android:layout_marginEnd="@dimen/edittext_margin"
        android:orientation="vertical"
        tools:context=".ui.user.profile.setting.SettingPasswordActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/edittext_margin"
            android:hint="@string/hint_new_password"
            mutableErrorValidate="@{viewModel.passwordError}">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edittext_padding"
                android:paddingStart="@dimen/edittext_margin"
                android:paddingEnd="@dimen/edittext_margin"
                android:paddingBottom="@dimen/edittext_padding"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/edittext_margin"
            android:hint="@string/hint_new_password_confirm"
            mutableErrorValidate="@{viewModel.passwordConfError}">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edittext_padding"
                android:paddingStart="@dimen/edittext_margin"
                android:paddingEnd="@dimen/edittext_margin"
                android:paddingBottom="@dimen/edittext_padding"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_registrasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ganti_password"
            mutableEnable="@{viewModel.buttonEnable}" />

    </LinearLayout>

</layout>