<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="xyz.cintiawan.titipyuk.ui.timeline.post.ItemPostViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardElevation="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lyt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="@dimen/circle_image_small"
                    android:layout_height="@dimen/circle_image_small"
                    android:layout_margin="@dimen/circle_image_margin"
                    mutableUserImage="@{viewModel.userImage}" />
                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    mutableText="@{viewModel.userName}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shadow" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_like"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_love"
                    android:text="@string/like"
                    android:textColor="@color/colorGrey"
                    mutableButtonText="@{viewModel.likes}" />
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_speech_balloon_comment"
                    android:text="@string/komentar"
                    android:textColor="@color/colorGrey"
                    mutableButtonText="@{viewModel.comments}" />
                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_share"
                    android:text="@string/share"
                    android:textColor="@color/colorGrey"
                    mutableButtonText="@{viewModel.shares}" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>